--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -12,3 +12,6 @@
     background-color: hsl(0, 0%, 30%);
     color: hsl(0, 0%, 100%);
 }
+.projects-container::-webkit-scrollbar {
+    display: none; 
+}
